// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch does nothing if data exists 1`] = `
Object {
  "/some/route/": Object {
    "id": 1,
    "isFetching": false,
    "isPostType": true,
    "isReady": true,
    "type": "example",
  },
}
`;

exports[`fetch returns 404 is fetch fails 1`] = `
Object {
  "/some/route/": Object {
    "is404": true,
    "isFetching": false,
    "isReady": false,
  },
}
`;

exports[`fetch should work if data doesn't exist 1`] = `
Object {
  "/some/route/": Object {
    "id": 1,
    "isFetching": false,
    "isPostType": true,
    "isReady": true,
    "type": "example",
  },
}
`;

exports[`init should add redirect if 'subirectory' is present 1`] = `
Array [
  Object {
    "pattern": "/blog/",
    "result": "/about-us/",
  },
  Object {
    "pattern": "/blog/all-posts/",
    "result": "/",
  },
  Object {
    "pattern": "/blog/wp-cat/:subpath+/",
    "result": "/category/subpath/",
  },
  Object {
    "pattern": "/blog/category/(.*)/",
    "result": "",
  },
  Object {
    "pattern": "/blog/wp-tag/:subpath+/",
    "result": "/tag/subpath/",
  },
  Object {
    "pattern": "/blog/tag/(.*)/",
    "result": "",
  },
  Object {
    "pattern": "/blog/:subpath*/",
    "result": "/subpath/",
  },
  Object {
    "pattern": "/(.*)",
    "result": "",
  },
]
`;
